Fixes integration with RareScanner
RareScanner changes the default pin template name, so when I was trying to enumerate them all, it was returning nothing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "SlashCmdList",
         "WorldMapFrame",
         "MapCanvasDataProviderMixin",
-        "MapCanvasPinMixin"
+        "MapCanvasPinMixin",
+        "RareScanner"
     ]
 }
