--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,16 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.18.2\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.21.0\\Annotations\\Core"
     ],
     "Lua.diagnostics.globals": [
         "SlashCmdList",
-        "WorldMapFrame",
         "MapCanvasDataProviderMixin",
         "MapCanvasPinMixin",
-        "RareScanner"
-    ]
+        "Settings",
+        "BATTLEFIELD_MAP_POI_SCALE",
+        "BattlefieldMapFrame",
+        "WorldMapFrame"
+    ],
+    "Lua.type.weakUnionCheck": true
 }
